fix drop down in dark mode

--- a/css/layout.css
+++ b/css/layout.css
@@ -22,3 +22,6 @@
     color: #ffffff;
     opacity: 0.7;
 }
+
+/* dark drop down */
+.dark-knight .releasesDatesList { background-color: #333; }
